--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ a {
 /* HEADER */
 .navigation-top {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .navigation-container {
   display: flex;
@@ -86,13 +89,15 @@ a {
 .link-navigation {
   position: relative;
   display: block;
-  color: #2e2f42;
+  color: #404bbf;
+
   font-size: 16px;
   padding-top: 24px;
   padding-bottom: 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-navigation:hover,
@@ -100,8 +105,7 @@ a {
   color: #404bbf;
 }
 
-.link-navigation:hover::after,
-.link-navigation:focus::after {
+.link-navigation::after {
   content: '';
   display: block;
   height: 4px;
@@ -109,6 +113,7 @@ a {
   width: 100%;
   background-color: #404bbf;
   position: absolute;
+  left: 0;
   bottom: -1px;
 }
 .our-address {
@@ -124,6 +129,7 @@ a {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts:hover,
 .contacts:focus {
@@ -140,10 +146,13 @@ a {
     ),
     url('../images/people-office.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   margin-left: 0;
   padding-top: 188px;
   padding-bottom: 188px;
   margin-right: 0;
+  max-width: 1440px;
 }
 .hero-image-container {
   display: flex;
@@ -176,6 +185,7 @@ a {
   max-width: 169px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-image-button:hover,
 .hero-image-button:focus {
@@ -222,8 +232,13 @@ a {
   letter-spacing: 0.32px;
 }
 .our-metods-icon-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   padding: 24px 100px;
   background-color: #f4f4fd;
+  margin-bottom: 8px;
   border-radius: 4px;
   border: 1px solid var(--LIGHT-SLATE, #8e8f99);
 }
@@ -285,6 +300,10 @@ a {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-point-svg {
   box-sizing: content-box;
@@ -293,6 +312,20 @@ a {
   padding: 12px;
   fill: #f4f4fd;
 }
+.team-socils-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-socials-point:hover,
+.team-socials-point:focus {
+  background-color: #404bbf;
+}
+
 /*_________________________________ OUR PORTFOLIO _______________________________*/
 .section-our-porfolio {
   padding-top: 120px;
@@ -307,14 +340,18 @@ a {
   column-gap: 24px;
   row-gap: 48px;
 }
-.our-portfolio-list .list-item {
+.our-portfolio-list-point {
   width: calc((100% - 78px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.our-portfolio-list-point:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .our-portfolio-block-name {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 .our-portfolio-name {
   color: #2e2f42;
@@ -374,7 +411,11 @@ a {
 }
 .container-footer {
   display: flex;
+  align-items: baseline;
   gap: 120px;
+}
+.container-footer-logo {
+  margin-right: 120px;
 }
 .container-social-media {
   display: flex;
@@ -388,11 +429,30 @@ a {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 .social-media-list {
   display: flex;
   gap: 16px;
 }
 .social-media-list-point {
+  width: 40px;
+  height: 40px;
+}
+.social-media-list-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-media-list-link:hover,
+.social-media-list-link:focus {
+  background-color: #31d0aa;
+}
+.social-media-list-svg {
+  fill: #f4f4fd;
 }
