--- a/css/styles.css
+++ b/css/styles.css
@@ -264,12 +264,15 @@ a {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
-.team-list .list-link {
+.team-list-link {
   display: flex;
   flex-direction: column;
   width: calc((100% - 72px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .our-team-list-name {
   color: #2e2f42;
@@ -300,9 +303,6 @@ a {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-point-svg {
@@ -312,7 +312,7 @@ a {
   padding: 12px;
   fill: #f4f4fd;
 }
-.team-socils-link {
+.team-socials-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -321,8 +321,8 @@ a {
   justify-content: center;
 }
 
-.team-socials-point:hover,
-.team-socials-point:focus {
+.team-socials-link:hover .team-socials-point,
+.team-socials-link:focus .team-socials-point {
   background-color: #404bbf;
 }
 
@@ -383,7 +383,7 @@ a {
   padding: 40px 32px;
   background-color: #4d5ae5;
   transform: translateY(100%);
-  transition: transform 250ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--CLOUD, #f4f4fd);
   overflow: auto;
   font-family: Roboto;
