--- a/css/styles.css
+++ b/css/styles.css
@@ -302,8 +302,6 @@ a {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #4d5ae5;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-point-svg {
   box-sizing: content-box;
@@ -316,13 +314,15 @@ a {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  background-color: #4d5ae5;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-socials-link:hover .team-socials-point,
-.team-socials-link:focus .team-socials-point {
+.team-socials-link:hover,
+.team-socials-link:focus {
   background-color: #404bbf;
 }
 
